--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
@@ -29,7 +29,9 @@ dependencies {
     implementation 'com.github.medyo:fancybuttons:1.8.4'
     implementation 'com.github.tamir7.contacts:contacts:1.1.7'
     implementation 'pl.charmas.android:android-reactive-location2:2.1@aar'
-    implementation 'com.google.android.gms:play-services-location:11.0.4' //you can use newer GMS version if you need
+    implementation 'com.google.android.gms:play-services-location:11.0.4'
+    //you can use newer GMS version if you need
     implementation 'com.google.android.gms:play-services-places:11.0.4'
     implementation 'com.github.xizzhu:RxLocation:0.1.0'
+    implementation project(':sms_library')
 }
