--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,6 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -25,15 +24,17 @@ dependencies {
     implementation 'com.android.support:support-media-compat:28.0.0'
     implementation 'com.android.support:animated-vector-drawable:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'gun0912.ted:tedpermission:2.1.1'
-    implementation 'com.github.medyo:fancybuttons:1.8.4'
-    implementation 'com.github.tamir7.contacts:contacts:1.1.7'
-    implementation 'pl.charmas.android:android-reactive-location2:2.1@aar'
-    implementation 'com.google.android.gms:play-services-location:11.6.2' //you can use newer GMS version if you need
-    implementation 'com.google.android.gms:play-services-places:11.6.2'
+
+    //아래는 외부 라이브러리
+    implementation 'gun0912.ted:tedpermission:2.1.1' //마시멜로우 권한 대응관련 라이브러리
+    implementation 'com.github.medyo:fancybuttons:1.8.4' //각종 아이콘 만들어놓은 라이브러리
+    implementation 'com.github.tamir7.contacts:contacts:1.1.7' //연락처 접근관련 라이브러리
     implementation 'com.github.xizzhu:RxLocation:0.1.0'
     implementation 'com.klinkerapps:android-smsmms:5.1.0'
+
+    //아래 3개는 위치관련 외부라이브러리를 쓰기위한 implementation
+    implementation 'pl.charmas.android:android-reactive-location2:2.1@aar' //위치관련 라이브러리
+    implementation 'com.google.android.gms:play-services-location:16.0.0'
+    implementation 'com.google.android.gms:play-services-places:16.0.0'
+
 }
